DOCSP-27536-change-stream-cursor-timeout (#5526)
* DOCSP-27536-change-stream-cursor-timeout

* Removing unnecessary file from another project.

* DOCSP-27536: Fixed ref formatting and made tense consistent.

--- a/source/includes/extracts-changestream.yaml
+++ b/source/includes/extracts-changestream.yaml
@@ -77,7 +77,8 @@ content: |
    - An :ref:`invalidate event <change-event-invalidate>` occurs; for
      example, a collection drop or rename.
 
-   - The connection to the MongoDB deployment is closed.
+   - The connection to the MongoDB deployment closes or times out. 
+     See :ref:`cursor-behaviors` for more information.
 
    - .. include:: /includes/extracts/changestream-remove-shard.rst
 ---
