fix toc landing pages (#5581)

--- a/snooty.toml
+++ b/snooty.toml
@@ -181,6 +181,7 @@ toc_landing_pages = [
    "/reference/security",
    "/reference/sharding",
    "/reference/stable-api",
+   "/reference/write-concern",
    "/release-notes/2.4",
    "/release-notes/2.6",
    "/release-notes/3.0",
