--- a/source/includes/extracts-sharded-clusters-backup-restore-limitations.yaml
+++ b/source/includes/extracts-sharded-clusters-backup-restore-limitations.yaml
@@ -1,23 +1,22 @@
 ref: sharded-clusters-backup-restore-mongodump-mongorestore-restriction
 content: |
-   
-   :binary:`~bin.mongodump` and :binary:`~bin.mongorestore`
-   :red:`cannot` be part of a backup strategy for 4.2+ sharded clusters
-   that have sharded transactions in progress, as backups created with
-   :binary:`~bin.mongodump` *do not maintain* the atomicity guarantees
-   of transactions across shards.
 
-   For 4.2+ sharded clusters with in-progress sharded transactions, use
-   one of the following coordinated backup and restore processes which
-   *do maintain* the atomicity guarantees of transactions across shards:
+   To use :program:`mongodump` and :program:`mongorestore` as a backup strategy
+   for sharded clusters, you must stop the 
+   :ref:`sharded cluster balancer <sharding-balancing>` and use the
+   :dbcommand:`fsync` command or the :method:`db.fsyncLock` method on
+   :program:`mongos` to block writes on the cluster during backups.
 
-   - `MongoDB Atlas <https://www.mongodb.com/atlas/database?tck=docs_server>`_,
+   Sharded clusters can also use one of the following coordinated backup
+   and restore processes, which maintain the atomicity guarantees of
+   transactions across shards:
+
+   - `MongoDB Atlas <https://www.mongodb.com/atlas/database?tck=docs_server>`_
 
    - `MongoDB Cloud Manager
-     <https://www.mongodb.com/cloud/cloud-manager?tck=docs_server>`_, or
-   
+     <https://www.mongodb.com/cloud/cloud-manager?tck=docs_server>`_
+
    - `MongoDB Ops Manager
-     <https://www.mongodb.com/products/ops-manager?tck=docs_server>`_.
-    
+     <https://www.mongodb.com/products/ops-manager?tck=docs_server>`_
 
 ...
