DOCSP-34844 freeSpaceTargetMB field (#5575)
* DOCSP-34844 freeSpaceTargetMB field

* add to release notes

* update code example

* release notes toc

* nit

* nit

* nit

* NV edits

* SW feedback

--- a/snooty.toml
+++ b/snooty.toml
@@ -211,6 +211,7 @@ toc_landing_pages = [
    "/release-notes/7.0",
    "/release-notes/7.1",
    "/release-notes/7.2",
+   "/release-notes/7.3",
    "/replication",
    "/security",
    "/sharding",
