--- a/snooty.toml
+++ b/snooty.toml
@@ -212,6 +212,7 @@ toc_landing_pages = [
    "/release-notes/7.1",
    "/release-notes/7.2",
    "/release-notes/7.3",
+   "/release-notes/8.0",
    "/replication",
    "/security",
    "/sharding",
@@ -262,7 +263,7 @@ windows-dir-version = "6.0" # wizard
 package-name-org = "mongodb-org"
 package-name-enterprise = "mongodb-enterprise"
 package-name = "mongodb"
-version = "7.3"
+version = "8.0"
 latest-lts-version = "7.0"
 last-supported-version = "5.0"
 release = "7.1.1"
