(DOCSP-38733): Add install docs for 8.0 (#7482)
* (DOCSP-38733): Add install docs for 8.0

* add install extract

* add installation to toc

* add installation to toc

* add copy for installation landing page

* update snooty.toml variables

* add enterprise install landing page

* add upgrade files

* fix version in upgrade include

* add upgrade ref

* get missing includes

* add in-dev banner

* update dev version

* fix version for red hat

* add ubuntu troubleshooting page

* update debian install page

* update platform support includes

* update red hat install steps

* update install steps

* add missing includes

* add linux enterprice landing page content

* remove unneeded file

* add version number to upgrade link

--- a/source/includes/extracts-install-mongodb-manually.yaml
+++ b/source/includes/extracts-install-mongodb-manually.yaml
@@ -22,6 +22,13 @@ content: |
 
      sudo zypper install libcurl4 libopenssl1_0_0 liblzma5
 ---
+ref: install-mongodb-enterprise-manually-debian-12
+content: |
+  .. code-block:: bash
+
+     sudo apt-get install libcurl4 libgssapi-krb5-2 libldap-2.4-2 libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit openssl liblzma5
+
+---
 ref: install-mongodb-enterprise-manually-debian-11
 content: |
   .. code-block:: bash
@@ -39,6 +46,13 @@ content: |
   .. code-block:: bash
 
      sudo apt-get install libcurl3 libgssapi-krb5-2 libldap-2.4-2 libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit openssl liblzma5
+---
+ref: install-mongodb-community-manually-debian-12
+content: |
+  .. code-block:: bash
+
+     sudo apt-get install libcurl4 libgssapi-krb5-2 libldap-2.4-2 libwrap0 libsasl2-2 libsasl2-modules libsasl2-modules-gssapi-mit openssl liblzma5
+
 ---
 ref: install-mongodb-community-manually-debian-11
 content: |
