--- a/source/includes/steps-install-mongodb-enterprise-on-debian.yaml
+++ b/source/includes/steps-install-mongodb-enterprise-on-debian.yaml
@@ -1,8 +1,8 @@
 stepnum: 1
 level: 4
-source:
-  file: steps-install-mongodb-on-debian.yaml
-  ref: import-key
+ref: import-key
+content: |
+  .. include:: /includes/curl-apt-com-gpg
 ---
 title: Create a ``/etc/apt/sources.list.d/mongodb-enterprise.list`` file for MongoDB.
 stepnum: 2
@@ -14,6 +14,14 @@ content: |
   of Debian:
 
   .. tabs::
+
+     .. tab:: Debian 12 "Bookworm"
+        :tabid: debian-12-bookworm
+
+        .. code-block:: bash
+
+           echo "deb [ signed-by=/usr/share/keyrings/mongodb-server-{+version+}.gpg ] http://repo.mongodb.com/apt/debian bookworm/mongodb-enterprise/{+version+} main" | sudo tee /etc/apt/sources.list.d/mongodb-enterprise.list
+
 
      .. tab:: Debian 11 "Bullseye"
         :tabid: debian-11-bullseye
