--- a/source/includes/steps-install-mongodb-enterprise-on-ubuntu.yaml
+++ b/source/includes/steps-install-mongodb-enterprise-on-ubuntu.yaml
@@ -1,9 +1,8 @@
 stepnum: 1
 level: 4
-ref: import-deb-key
-source:
-  file: steps-install-mongodb-on-ubuntu.yaml
-  ref: import-key
+ref: import-key
+content: |
+  .. include:: /includes/curl-apt-com-gpg
 ---
 title: Create a list file for MongoDB
 stepnum: 2
