--- a/source/includes/steps-install-mongodb-on-ubuntu.yaml
+++ b/source/includes/steps-install-mongodb-on-ubuntu.yaml
@@ -3,7 +3,7 @@ stepnum: 1
 level: 4
 ref: import-key
 content: |
-  .. include:: /includes/curl-apt-gpg
+  .. include:: /includes/curl-apt-org-gpg
 ---
 title: Create a list file for MongoDB
 stepnum: 2
