--- a/source/includes/steps-install-verify-files-pgp.yaml
+++ b/source/includes/steps-install-verify-files-pgp.yaml
@@ -43,18 +43,18 @@ stepnum: 3
 ref: download-key-file
 action:
  - pre: |
-     If you have not downloaded and imported the MongoDB {+release+} public key,
+     If you have not downloaded and imported the MongoDB {+version+} public key,
      run these commands:
    language: sh
    copyable: true
    code: |
-     curl -LO https://pgp.mongodb.com/server-{+release+}.asc
-     gpg --import server-{+release+}.asc
+     curl -LO https://pgp.mongodb.com/server-{+version+}.asc
+     gpg --import server-{+version+}.asc
  - pre: |
      PGP should return this response:
    language: sh
    code: |
-     gpg: key {+rsa-key+}: "MongoDB {+release+} Release Signing Key <packaging@mongodb.com>" imported
+     gpg: key {+rsa-key+}: "MongoDB {+version+} Release Signing Key <packaging@mongodb.com>" imported
      gpg: Total number processed: 1
      gpg:               imported: 1
 ---
