--- a/source/includes/steps-install-mongodb-enterprise-on-red-hat.yaml
+++ b/source/includes/steps-install-mongodb-enterprise-on-red-hat.yaml
@@ -2,40 +2,66 @@ title: Configure repository.
 ref: install-repository
 stepnum: 1
 level: 4
-pre: |
+content: |
+
   Create an ``/etc/yum.repos.d/mongodb-enterprise-{+version+}.repo`` file so that
-  you can install MongoDB enterprise directly using ``yum``:
-action:
-  language: cfg
-  code: |
-    [mongodb-enterprise-{+version+}]
-    name=MongoDB Enterprise Repository
-    baseurl=https://repo.mongodb.com/yum/{{distro_name}}/{{distro_release}}/mongodb-enterprise/{+version+}/$basearch/
-    gpgcheck=1
-    enabled=1
-    gpgkey=https://pgp.mongodb.com/server-{+pgp-version+}.asc
-post: |
+  you can install MongoDB Enterprise directly using ``yum``:
 
-    .. note::
-       If you have a ``mongodb-enterprise.repo`` file
-       in this directory from a previous installation of MongoDB, you
-       should remove it. Use the ``mongodb-enterprise-{+version+}.repo``
-       file above to install MongoDB {+version+}.
+  .. tabs::
 
-    You can also download the ``.rpm`` files directly from the
-    {{distro_link}}. Downloads are organized by {{distro_name_full}}
-    version (e.g. ``{{distro_num}}``), then MongoDB
-    :doc:`release version </reference/versioning>`
-    (e.g. ``{+version+}``), then architecture (e.g. ``x86_64``).
+     .. tab:: 9
+        :tabid: rhel9
 
-    .. include:: /includes/5.0-changes/fact-odd-number-releases.rst
+        .. code-block:: cfg
 
-replacement:
-  distro_name: "redhat"
-  distro_link: "`MongoDB repository <https://repo.mongodb.com/yum/redhat/>`_"
-  distro_release: "$releasever"
-  distro_name_full: "Red Hat / CentOS"
-  distro_num: "7"
+           [mongodb-enterprise-{+version+}]
+           name=MongoDB Enterprise Repository
+           baseurl=https://repo.mongodb.com/yum/redhat/9/mongodb-enterprise/{+version+}/$basearch/
+           gpgcheck=1
+           enabled=1
+           gpgkey=https://pgp.mongodb.com/server-{+pgp-version+}.asc
+
+
+     .. tab:: 8
+        :tabid: rhel8
+
+        .. code-block:: cfg
+
+           [mongodb-enterprise-{+version+}]
+           name=MongoDB Enterprise Repository
+           baseurl=https://repo.mongodb.com/yum/redhat/8/mongodb-enterprise/{+version+}/$basearch/
+           gpgcheck=1
+           enabled=1
+           gpgkey=https://pgp.mongodb.com/server-{+pgp-version+}.asc
+
+     .. tab:: 7
+        :tabid: rhel7
+
+        .. code-block:: cfg
+
+           [mongodb-enterprise-{+version+}]
+           name=MongoDB Enterprise Repository
+           baseurl=https://repo.mongodb.com/yum/redhat/7/mongodb-enterprise/{+version+}/$basearch/
+           gpgcheck=1
+           enabled=1
+           gpgkey=https://pgp.mongodb.com/server-{+pgp-version+}.asc
+
+
+  .. note::
+     If you have a ``mongodb-enterprise.repo`` file
+     in this directory from a previous installation of MongoDB, you
+     should remove it. Use the ``mongodb-enterprise-{+version+}.repo``
+     file above to install MongoDB {+version+}.
+
+  You can also download the ``.rpm`` files directly from the
+  `MongoDB repository <https://repo.mongodb.com/yum/redhat/>`_.
+  Downloads are organized by Red Hat / CentOS
+  version (e.g. ``9``), then MongoDB
+  :ref:`release version <release-version-numbers>`
+  (e.g. ``{+version+}``), then architecture (e.g. ``x86_64``).
+
+  .. include:: /includes/5.0-changes/fact-odd-number-releases.rst
+
 ---
 title: Install the MongoDB Enterprise packages.
 stepnum: 2
