--- a/source/includes/steps-install-mongodb-on-red-hat.yaml
+++ b/source/includes/steps-install-mongodb-on-red-hat.yaml
@@ -2,33 +2,59 @@ title: Configure the package management system (``yum``).
 stepnum: 1
 level: 4
 ref: config-yum
-pre: |
+content: |
   Create a ``/etc/yum.repos.d/mongodb-org-{+version+}.repo`` file so that
   you can install MongoDB directly using ``yum``:
-action:
-  language: cfg
-  code: |
-    [mongodb-org-{+version+}]
-    name=MongoDB Repository
-    baseurl=https://repo.mongodb.org/yum/{{distro_name}}/{{distro_release}}/mongodb-org/{+version+}/x86_64/
-    gpgcheck=1
-    enabled=1
-    gpgkey=https://pgp.mongodb.com/server-{+pgp-version+}.asc
-post: |
-    You can also download the ``.rpm`` files directly from the
-    {{distro_link}}. Downloads are organized by {{distro_name_full}}
-    version (e.g. ``{{distro_num}}``), then MongoDB
-    :doc:`release version </reference/versioning>`
-    (e.g. ``{+version+}``), then architecture (e.g. ``x86_64``).
+
+  .. tabs::
+
+     .. tab:: 9
+        :tabid: rhel9
+
+        .. code-block:: cfg
+
+           [mongodb-org-{+version+}]
+           name=MongoDB Repository
+           baseurl=https://repo.mongodb.org/yum/redhat/9/mongodb-org/{+version+}/x86_64/
+           gpgcheck=1
+           enabled=1
+           gpgkey=https://pgp.mongodb.com/server-{+pgp-version+}.asc
+
+
+     .. tab:: 8
+        :tabid: rhel8
+
+        .. code-block:: cfg
+
+           [mongodb-org-{+version+}]
+           name=MongoDB Repository
+           baseurl=https://repo.mongodb.org/yum/redhat/8/mongodb-org/{+version+}/x86_64/
+           gpgcheck=1
+           enabled=1
+           gpgkey=https://pgp.mongodb.com/server-{+pgp-version+}.asc
+
+
+     .. tab:: 7
+        :tabid: rhel7
+
+        .. code-block:: cfg
+
+           [mongodb-org-{+version+}]
+           name=MongoDB Repository
+           baseurl=https://repo.mongodb.org/yum/redhat/7/mongodb-org/{+version+}/x86_64/
+           gpgcheck=1
+           enabled=1
+           gpgkey=https://pgp.mongodb.com/server-{+pgp-version+}.asc
+
+  You can also download the ``.rpm`` files directly from the
+  `MongoDB repository <https://repo.mongodb.org/yum/redhat/>`_.
+  Downloads are organized by Red Hat / CentOS 
+  version (e.g. ``9``), then MongoDB
+  :ref:`release version <release-version-numbers>` 
+  (e.g. ``{+version+}``), then architecture (e.g. ``x86_64``).
  
-    .. include:: /includes/5.0-changes/fact-odd-number-releases.rst
+  .. include:: /includes/5.0-changes/fact-odd-number-releases.rst
     
-replacement:
-  distro_name: "redhat"
-  distro_link: "`MongoDB repository <https://repo.mongodb.org/yum/redhat/>`_"
-  distro_release: "$releasever"
-  distro_name_full: "Red Hat / CentOS"
-  distro_num: "7"
 ---
 title: Install the MongoDB packages.
 stepnum: 2
@@ -51,10 +77,13 @@ action:
 
       .. include:: /includes/release/pin-repo-to-version-yum.rst
   - pre: |
-      You can specify any available version of MongoDB. However ``yum``
-      upgrades the packages when a newer version becomes available. To
-      prevent unintended upgrades, pin the package. To pin a package, add
-      the following ``exclude`` directive to your ``/etc/yum.conf`` file:
+      .. note:: 
+
+        ``yum`` automatically upgrades packages when newer versions
+        become available. If you want to prevent MongoDB upgrades, pin
+        the package by adding the following ``exclude`` directive to
+        your ``/etc/yum.conf`` file:
+
     language: ini
     code: |
       exclude=mongodb-org,mongodb-org-database,mongodb-org-server,mongodb-mongosh,mongodb-org-mongos,mongodb-org-tools
