Verify MongoDB packages for 8.0 (#7489)
* Initial commit

* Fixes build log error

* Updated release version in snooty.toml

* Typo fix

--- a/source/includes/steps-install-verify-files-windows.yaml
+++ b/source/includes/steps-install-verify-files-windows.yaml
@@ -3,10 +3,8 @@ level: 4
 ref: download-install-file
 content: |
   Download the MongoDB ``.msi`` installer. For example, to download the
-  latest version of MongoDB Community Edition:
-  
-  |arrow| `MongoDB Community Download Center
-  <https://www.mongodb.com/try/download/community?tck=docs_server>`__
+  latest version of MongoDB Community Edition, see `MongoDB Community Download Center
+  <https://www.mongodb.com/try/download/community?tck=docs_server>`__.
   
   a. In the :guilabel:`Version` dropdown, select
      ``{+release+} (current release)``.
