DOCS-16722-bit-updates (#7527)
* DOCS-16722-bit-updates

* DOCS-16722-bit-updates

* DOCS-16722-bit-updates

---------

Co-authored-by: jason-price-mongodb <jshfjghsdfgjsdjh@aolsdjfhkjsdhfkjsdf.com>

--- a/source/includes/extracts-fact-query-bitwise.yaml
+++ b/source/includes/extracts-fact-query-bitwise.yaml
@@ -14,8 +14,8 @@ content: |
 
   Numeric Bitmask
     You can provide a numeric bitmask to be matched against the operand field.
-    It must be representable as a non-negative 32-bit signed integer. Otherwise,
-    :query:`{{op}}` will return an error.
+    The bitmask must be a non-negative 64-bit signed integer.
+    Otherwise, :query:`{{op}}` returns an error.
 
   BinData Bitmask
     You can also use an arbitrarily large :bsontype:`BinData <Binary>` 
