Removes 4.2 Release Notes (#7557)
* Remove 4.2 Release Notes

* Build error fixes

* Build error fixes

* Build error fixes

* Build error fixes

--- a/source/includes/extracts-4.2-changes.yaml
+++ b/source/includes/extracts-4.2-changes.yaml
@@ -152,7 +152,7 @@ content: |
 
    To help identify slow queries with the same :term:`query shape`,
    starting in MongoDB 4.2, each :term:`query shape` is associated with
-   a :ref:`queryHash <4.2-query-hash>`. The ``queryHash`` is a
+   a queryHash. The ``queryHash`` is a
    hexadecimal string that represents a hash of the query shape and
    is dependent only on the query shape.
 
@@ -167,8 +167,7 @@ ref: 4.2-changes-plan-cache-key
 content: |
 
    To provide more insight into the :doc:`query plan cache
-   </core/query-plans>`, MongoDB 4.2 introduces the :ref:`planCacheKey
-   <4.2-plan-cache-key>`. 
+   </core/query-plans>`, MongoDB 4.2 introduces the ``planCacheKey``. 
    
    ``planCacheKey`` is a hash of the key for the plan cache entry
    associated with the query.
