--- a/source/includes/steps-change-standalone-wiredtiger.yaml
+++ b/source/includes/steps-change-standalone-wiredtiger.yaml
@@ -27,7 +27,7 @@ content: |
 title: "Update configuration for WiredTiger."
 ref: change-wt-standalone-remove-mmapv1-config
 content: |
-  Remove any :ref:`4.2-mmapv1-conf-options` from the :binary:`~bin.mongod`
+  Remove any MMAPv1 configuration options from the :binary:`~bin.mongod`
   instance configuration.
 ---
 title: "Start ``mongod`` with WiredTiger."
