--- a/source/includes/steps-fips-config.yaml
+++ b/source/includes/steps-fips-config.yaml
@@ -17,7 +17,7 @@ content: |
            FIPSMode: true
            
   Although still available, the :setting:`net.ssl.FIPSMode` is
-  :ref:`deprecated as of MongoDB 4.2 <4.2-tls>`.
+  deprecated as of MongoDB 4.2.
 
   **In MongoDB 4.0 and earlier versions:**
 
