Removes 3.6 Release Notes (#7559)
* Removes 3.6 Release Notes

* Fix build errors

* Fix build errors

--- a/source/includes/extracts-default-bind-ip-security.yaml
+++ b/source/includes/extracts-default-bind-ip-security.yaml
@@ -42,8 +42,7 @@ content: |
    Include additional options as required for your configuration. For
    instance, if you wish remote clients to connect to your deployment
    or your deployment members are run on different hosts, specify the
-   ``--bind_ip``. For more information, see
-   :ref:`3.6-bind_ip-compatibility`.
+   ``--bind_ip``. 
 
 ---
 ref: default-bind-ip-security-additional-config-file
@@ -52,8 +51,7 @@ content: |
    Include additional  options as required
    for your configuration. For instance, if you wish remote clients to
    connect to your deployment or your deployment members are run on
-   different hosts, specify the :setting:`net.bindIp` setting. For more
-   information, see :ref:`3.6-bind_ip-compatibility`. 
+   different hosts, specify the :setting:`net.bindIp` setting. 
 
 
 ...
