Data modeling: Versioning design patterns (#7613)
* DOCSP-28619: Versioning landing page (#5792)

* (DOCSP-28619): Versioning landing page

* update snooty.toml

* wording

* rename files

* tweak page title

* update snooty.toml

* review feedback

* typo

* edits

* DOCSP-38700 Document versioning pattern (#7611)

* (DOCSP-28619): Versioning landing page

* update snooty.toml

* wording

* rename files

* tweak page title

* WIP

* WIP

* WIP

* finalize first draft

* wording

* (DOCSP-28619): Versioning landing page

* update snooty.toml

* wording

* rename files

* tweak page title

* update snooty.toml

* tweak intro

* fix formatting

* add line highlights

* change sort order

* standardize ids and output

* change line highlights

* add page meta info

* remove bold

* change toc depth

* wording

* review feedback

* typo

* keep current document in the revisions collection

* edits

* finalize

* standardize steps

* wording

* copy feedback

* fix intro

* minimalism

* nit

* wording

* edits

* DOCSP-38766 Schema versioning pattern

--- a/snooty.toml
+++ b/snooty.toml
@@ -125,6 +125,7 @@ toc_landing_pages = [
    "/data-modeling/data-consistency",
    "/data-modeling/design-patterns",
    "/data-modeling/design-patterns/group-data",
+   "/data-modeling/design-patterns/data-versioning",
    "/geospatial-queries",
    "/indexes",
    "/installation",
