DOCSP-38862 Shard with a namespace filter must be started with --restore (#7568)
* DOCSP-38862 Shard with a namespace filter must be started with --restore too

* internal review

--- a/source/includes/steps-restore-sharded-config-primary-from-backup.yaml
+++ b/source/includes/steps-restore-sharded-config-primary-from-backup.yaml
@@ -47,9 +47,9 @@ content: |
 
               .. code-block:: yaml
 
-                 #replication
+                 #replication:
                  #  replSetName: myCSRSName
-                 #sharding
+                 #sharding:
                  #  clusterRole: configsvr
 
 
@@ -106,9 +106,9 @@ content: |
 
               .. code-block:: yaml
 
-                 #replication
+                 #replication:
                  #  replSetName: myCSRSName
-                 #sharding
+                 #sharding:
                  #  clusterRole: configsvr
 
            #. To start the :binary:`mongod <bin.mongod>` using a 
@@ -311,9 +311,9 @@ replacement:
 
     .. code-block:: yaml
 
-       replication
+       replication:
          replSetName: myNewCSRSName
-       sharding
+       sharding:
          clusterRole: configsvr
     
 ---
