--- a/source/includes/steps-restore-sharded-shard-primary-from-backup.yaml
+++ b/source/includes/steps-restore-sharded-shard-primary-from-backup.yaml
@@ -48,9 +48,9 @@ content: |
 
               .. code-block:: yaml
 
-                 #replication
+                 #replication:
                  #  replSetName: myShardName
-                 #sharding
+                 #sharding:
                  #  clusterRole: shardsvr
 
 
@@ -62,6 +62,13 @@ content: |
               .. code-block:: bash
 
                  mongod --config /path/to/mongodb/mongod.conf
+
+              If you're restoring from a snapshot with a namespace 
+              filter, specify the ``--restore`` option.
+
+              .. code-block:: bash
+
+                 mongod --config /path/to/mongod/mongod.conf --restore
 
               If you have :binary:`mongod <bin.mongod>` configured to 
               run as a system service, start it using the recommended 
@@ -99,9 +106,9 @@ content: |
     
               .. code-block:: yaml
 
-                 #replication
+                 #replication:
                  #  replSetName: myShardName
-                 #sharding
+                 #sharding:
                  #  clusterRole: shardsvr
 
            #. To start the :binary:`mongod <bin.mongod>` using a 
@@ -285,9 +292,9 @@ replacement:
 
     .. code-block:: yaml
 
-       replication
+       replication:
          replSetName: myNewShardName
-       sharding
+       sharding:
          clusterRole: shardsvr
 
 ---
