--- a/source/includes/steps-restore-primary-from-backup.yaml
+++ b/source/includes/steps-restore-primary-from-backup.yaml
@@ -17,12 +17,15 @@ title: "Drop the ``local`` database if it exists in the backup."
 ref: drop-local
 pre: |
    If you are restoring from a filesystem backup (or any backup with
-   the ``local`` database), drop the ``local`` database. 
+   the ``local`` database), drop the ``local`` database.
 action:
-   - heading: Start a standalone :binary:`~bin.mongod` using the data files from the backup as the data path.
+   - heading: Start a standalone :binary:`~bin.mongod` using the data files from the backup as the data path. 
+     pre: |
+        You must also specify the same :ref:`startup options
+        <mongod-options>` that were used when the snapshot was created.
      language: sh
      code: |
-        mongod --dbpath /data/db
+        mongod --dbpath /data/db <startup options>
    - heading: Drop the ``local`` database.
      pre: |
         Connect :binary:`~bin.mongosh` to the :binary:`~bin.mongod`
@@ -45,10 +48,13 @@ pre: |
   For :ref:`config server replica set (CSRS) <csrs>`,
   include the :option:`--configsvr <mongod --configsvr>` option.
   Include any other options as appropriate for your deployment.
+
+  You must also specify the same :ref:`startup options <mongod-options>`
+  that were used when the snapshot was created.
   
   .. note::
 
-     Starting in MongoDB 3.6, if your replica set members are run on
+     If your replica set members are run on
      different hosts or if you wish remote clients to connect to your
      instance, you must specify the :setting:`net.bindIp` setting (or
      :option:`--bind_ip <mongod --bind_ip>`).
@@ -58,7 +64,7 @@ pre: |
 action:
   language: sh
   code: |
-    mongod --dbpath /data/db --replSet <replName>
+    mongod --dbpath /data/db --replSet <replName> <startup options>
 post: |
   .. include:: /includes/fact-uuid-restore-from-backup.rst
 
