--- a/source/includes/steps-5.0-upgrade-replica-set.yaml
+++ b/source/includes/steps-5.0-upgrade-replica-set.yaml
@@ -17,7 +17,7 @@ level: 5
 ref: 5.0-upgrade-rs-step-down-primary
 content: |
   Connect :binary:`~bin.mongosh` to the primary and use
-  :method:`rs.stepDown()` to step down the primary and force an
+  :method:`rs.stepDown()` to :term:`step down` the primary and force an
   election of a new primary.
 ---
 title: Upgrade the primary.
