--- a/source/includes/steps-5.0-upgrade-sharded-cluster.yaml
+++ b/source/includes/steps-5.0-upgrade-sharded-cluster.yaml
@@ -78,7 +78,7 @@ content: |-
    #. Step down the replica set primary.
 
       a. Connect :binary:`~bin.mongosh` to the primary and use
-         :method:`rs.stepDown()` to step down the primary and force an
+         :method:`rs.stepDown()` to :term:`step down` the primary and force an
          election of a new primary:
 
          
@@ -180,8 +180,8 @@ content: |-
    #. Step down the replica set primary.
 
       Connect :binary:`~bin.mongosh` to the primary and use
-      :method:`rs.stepDown()` to step down the primary and force an
-      election of a new primary:
+      :method:`rs.stepDown()` to :term:`step down` the primary 
+      and force an election of a new primary:
 
       .. code-block:: javascript
 
