--- a/source/includes/extracts-geojson-specification.yaml
+++ b/source/includes/extracts-geojson-specification.yaml
@@ -2,17 +2,17 @@ ref: geojson-specification
 content: |
    To specify GeoJSON data, use an embedded document with:
 
-   - a field named ``type`` that specifies the :doc:`GeoJSON object
-     type </reference/geojson>` and
+   - a field named ``type`` that specifies the GeoJSON object
+     type, and
 
    - a field named ``coordinates`` that specifies the object's
      coordinates. 
 
-     .. include::  /includes/extracts/geospatial-long-lat-values.rst
-
    .. code-block:: javascript
 
       <field>: { type: <GeoJSON type> , coordinates: <coordinates> }
+
+   .. include::  /includes/extracts/geospatial-long-lat-values.rst
 
 ---
 ref: geojson-specification-query-calculation
