--- a/source/includes/extracts-wired-tiger.yaml
+++ b/source/includes/extracts-wired-tiger.yaml
@@ -215,22 +215,14 @@ content: |
    WiredTiger syncs the buffered journal records to disk upon any of
    the following conditions:
 
-   - For replica set members (primary and secondary members),
-   
-     - If there are operations waiting for oplog entries. Operations
-       that can wait for oplog entries include:
-        
-       - forward scanning queries against the oplog
+   - For replica set members (primary and secondary members):
 
-       - read operations performed as part of :ref:`causally consistent
-         sessions <causal-consistency>`
+     - If a write operation includes or implies a write concern of
+       :writeconcern:`j: true <j>`.
 
      - Additionally for secondary members, after every batch
        application of the oplog entries.
 
-   - If a write operation includes or implies a write concern of
-     :writeconcern:`j: true <j>`.
-     
      .. note::
 
         Write concern :writeconcern:`"majority"` implies ``j: true`` if
