(DOCSP-37949): Adds includes for nav to top-level Atlas pages. (#7802)
* (DOCSP-37949): Adds includes for nav to top-level Atlas pages.

* (DOCSP-38049): Incorporated Nick's feedback.

* (DOCSP-38049): Incorporated Nick's feedback.

--- a/source/includes/steps-create-admin-then-enable-authentication.yaml
+++ b/source/includes/steps-create-admin-then-enable-authentication.yaml
@@ -37,7 +37,7 @@ level: 4
 ref: connect
 pre: |
 
-  Open a new terminal and connect to the database deployment with
+  Open a new terminal and connect to the cluster with
   :binary:`~bin.mongosh`:
 
 action:
