DOCSP-37996 Sharded Backup Consistency (#6959) (#7825)
* DOCSP-37996 Consistency of Sharded Backups

* Reworks text

* Reworks text

* Reworks text

* Reworks text

* Fixes per Maria

* Fixes per Maria

* Fixes per Maria

* Fixes per Ratika

* Fixes per Ratika

* Fixes per Ratika

* Fixes code issue

* Fixes per Maria

* Fixes per Maria

* Fixes per Maria

* Fixes per Nandini

* Fixes per Nandini

* Fixes per Nandini

* Fixes per Maria

* Fixes per Maria/Nandini

* Fixes per Maria

* Fixes per Ashley

* Fixes per Ashley

--- a/source/includes/extracts-export-tools-performance-considerations-base.yaml
+++ b/source/includes/extracts-export-tools-performance-considerations-base.yaml
@@ -25,6 +25,10 @@ content: |
   - Ensure that your backups are usable by restoring them to a test
     MongoDB deployment.
 
+  - To help reduce the likelihood of inconsistencies in a sharded
+    cluster backup, you must stop the balancer, stop all write operations, and
+    stop any schema transformations for the duration of the backup.
+
   .. seealso::
 
      :doc:`/core/backups` and
