--- a/source/includes/extracts-export-tools-performance-considerations.yaml
+++ b/source/includes/extracts-export-tools-performance-considerations.yaml
@@ -6,9 +6,14 @@ replacement:
   out_tool: ":binary:`mongodump`"
   in_tool: ":binary:`mongorestore`"
   mongoDumpBullet: |
-    - Use :option:`--oplog <mongodump --oplog>` to capture incoming write operations during
-      the :binary:`mongodump` operation to ensure that the backups reflect
-      a consistent data state.
+    - To ensure :binary:`mongodump` can take a consistent backup of
+      a replica set, you must either use the 
+      :option:`--oplog <mongodump --oplog>` option to capture writes
+      received during backup operations or stop all writes to the 
+      replica set for the duration of the backup.
+
+      For sharded cluster replica sets, see
+      :ref:`backup-sharded-dumps`.
 ---
 ref: tools-performance-considerations-export-import
 source:
