DOCSP-39999-5.0.27-release-notes (#7878)
* DOCSP-39999-5.0.27-release-notes

* Updating changelog with ref.

--- a/config/changelog_conf.yaml
+++ b/config/changelog_conf.yaml
@@ -65,6 +65,7 @@ groups:
     - Change streams
     - Build-compile
     - Evergreen
+    - csuite
   "Internals":
     - Testing
     - Python tests
