(DOCSP-37849): Default query timeout cluster parameter  (#7169)
* WIP

* (DOCSP-37849): Default query timeout cluster parameter

* typo

* wording

* add line highlight

* typo

* edits

* wording

* add info for analytics nodes

* first draft for query timeout page

* tweak

* tweaks

* add privilege action for bypass

* edits

* wording

* add new metric for defaultMaxTimeMS

* review feedback

* edit

* add link for behavior details

* wording

* add release notes

* update access control per external feedback

* wording

--- a/source/includes/extracts-built-in-roles.yaml
+++ b/source/includes/extracts-built-in-roles.yaml
@@ -144,6 +144,11 @@ content: |
   - :authrole:`restore`
   - :authrole:`backup`
   
-  Also provides the :authaction:`validate`
-  privilege action on ``system.`` collections.
+  Also provides the following privilege actions:
+  
+  - :authaction:`validate` on ``system.`` collections.
+
+  - :authaction:`bypassDefaultMaxTimeMS`, which
+    causes all queries run by the user to ignore the value of
+    :parameter:`defaultMaxTimeMS`.
 ...
