--- a/source/includes/extracts-atlas-search-facts.yaml
+++ b/source/includes/extracts-atlas-search-facts.yaml
@@ -3,9 +3,9 @@ content: |
 
   .. note::
   
-     This page describes text search capabilities for self-managed
+     This page describes text query capabilities for self-managed
      (non-Atlas) deployments. For data hosted on MongoDB Atlas, MongoDB
-     offers an improved full-text search solution, :atlas:`Atlas Search
+     offers an improved full-text query solution, :atlas:`Atlas Search
      </atlas-search/>`.
 
 ---
