(DOCSP-39662): Hedged reads are deprecated in 8.0 (#7832)
* (DOCSP-39662): Hedged reads are deprecated in 8.0

* tweak include copy

* format serverstatus include

* more include formatting

* update compat notes

* add important

* tweak include copy

* external review feedback

--- a/source/includes/extracts-server-selection-read-preference.yaml
+++ b/source/includes/extracts-server-selection-read-preference.yaml
@@ -105,9 +105,7 @@ content: |
 
           #. From this list of eligible members that fall within the
              latency window, the :binary:`~bin.mongos` randomly chooses
-             an eligible member. If using :ref:`hedged reads
-             <mongos-hedged-reads>`, :binary:`~bin.mongos` selects a
-             second eligible member if available.
+             an eligible member.
 
       * - :readmode:`nearest`
 
@@ -132,33 +130,22 @@ content: |
 
           #. From this list of eligible members that fall within the
              latency window, the :binary:`~bin.mongos` randomly chooses
-             an eligible member. If using :ref:`hedged reads
-             <mongos-hedged-reads>`, :binary:`~bin.mongos` selects a
-             second eligible member if available.
+             an eligible member.
 
       * - :readmode:`primaryPreferred`
 
         - #. If the primary is available, :binary:`~bin.mongos` selects the primary.
 
-          #. If the primary is unavailable or if :binary:`mongos` is
-             using :ref:`hedged reads <mongos-hedged-reads>`, server
+          # . If the primary is unavailable, server
              selection follows the process for the read preference
-             ``secondary``. For hedged reads, 
-
-             - If the primary is available, :binary:`~bin.mongos`
-               selects a single eligible secondary, if available.
-
-             - If the primary is unavailable, :binary:`~bin.mongos`
-               selects two eligible secondaries, if available.
+             ``secondary``.
 
       * - :readmode:`secondaryPreferred`
 
         - #. Following the server selection process for the read
              preference ``secondary``, if a list of eligible secondary
-             members is non-empty, :binary:`~bin.mongos` chooses an eligible secondary. If using
-             :ref:`hedged reads <mongos-hedged-reads>`,
-             :binary:`~bin.mongos` selects another secondary if
-             available.
+             members is non-empty, :binary:`~bin.mongos` chooses an
+             eligible secondary.
 
           #. If the list of eligible secondary
              members is empty or if :binary:`mongos` is using hedged
