(DOCSP-40175): Replace mongodump sharded cluster callout with link to tutorial (#7927)

--- a/source/includes/extracts-sharded-clusters-backup-restore-limitations.yaml
+++ b/source/includes/extracts-sharded-clusters-backup-restore-limitations.yaml
@@ -1,11 +1,8 @@
 ref: sharded-clusters-backup-restore-mongodump-mongorestore-restriction
 content: |
 
-   To use :program:`mongodump` and :program:`mongorestore` as a backup strategy
-   for sharded clusters, you must stop the 
-   :ref:`sharded cluster balancer <sharding-balancing>` and use the
-   :dbcommand:`fsync` command or the :method:`db.fsyncLock` method on
-   :program:`mongos` to block writes on the cluster during backups.
+   To use :program:`mongodump` and :program:`mongorestore` as a backup
+   strategy for sharded clusters, see :ref:`backup-sharded-dumps`.
 
    Sharded clusters can also use one of the following coordinated backup
    and restore processes, which maintain the atomicity guarantees of
