DOCSP 40020 removing search from behavior section of $text (#7892)
* DOCSP-40020 removing search from text behavior

* DOCSP-40020 removing search from text behavior

* DOCSP-40020 removing search from text behavior

* DOCSP-40020 removing search from text behavior

* DOCSP-40020 removing search from text behavior

* DOCSP-40020 removing search from text behavior

* DOCSP-40020 melissa comments and search revamp

* DOCSP-40020 melissa comments and search revamp

* DOCSP-40020 melissa comments and search revamp

* DOCSP-40020 melissa comments and search revamp

* Update source/reference/operator/query/text.txt

Co-authored-by: Melissa Mahoney <melissa.mahoney@mongodb.com>

* Update source/reference/operator/query/text.txt

Co-authored-by: Melissa Mahoney <melissa.mahoney@mongodb.com>

* Update source/reference/operator/query/text.txt

Co-authored-by: Melissa Mahoney <melissa.mahoney@mongodb.com>

---------

Co-authored-by: Sarah Lin <55722001+sarahemlin@users.noreply.github.com>
Co-authored-by: Melissa Mahoney <melissa.mahoney@mongodb.com>

--- a/source/includes/extracts-views.yaml
+++ b/source/includes/extracts-views.yaml
@@ -4,7 +4,7 @@ content: |
 ---
 ref: views-unsupported-text-search
 content: |
-   :ref:`Views <views-landing-page>` do not support text search.
+   :ref:`Views <views-landing-page>` do not support ``$text``.
 ---
 ref: views-unsupported-mapReduce
 content: |
